Archive2/3c/349d3a80b8b1cc/output
main.cpp: In function 'int main()':
main.cpp:17:5: error: redefinition of 'int main()'
 int main() {
     ^
main.cpp:12:5: note: 'int main()' previously defined here
 int main()
     ^
